--- a/env.example
+++ b/env.example
@@ -1,5 +1,7 @@
-DB_DATABASE='node_app_test'
-DB_USERNAME= 'root'
-DB_PASSWORD= ''
-DB_HOST='localhost'
-DB_CONNECTION= 'mysql'
+DB_DATABASE='DATABASE_NAME'
+DB_USERNAME= 'DATABASE_USERNAME'
+DB_PASSWORD= 'DATABASE_PASSWORD'
+DB_HOST='DATABASE_HOST'
+DB_CONNECTION= 'DATABASE_CONNECTION'
+
+JWT_SECRET_KEY="Your Secret Token"
