--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "bbn-backend",
+    "name": "file-storage-system",
     "version": "1.0.0",
-    "description": "this is bbn backend api project",
+    "description": "this is file storage system api project",
     "main": "server.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
@@ -14,17 +14,17 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/iota-it-tech/bbn-backend.git"
+        "url": "git+https://github.com/sayalok/node-js-file-storage-system"
     },
     "keywords": [
-        "bbn"
+        "File Storage"
     ],
     "author": "ME",
     "license": "ISC",
     "bugs": {
-        "url": "https://github.com/iota-it-tech/bbn-backend/issues"
+        "url": "https://github.com/sayalok/node-js-file-storage-system"
     },
-    "homepage": "https://github.com/iota-it-tech/bbn-backend#readme",
+    "homepage": "https://github.com/sayalok/node-js-file-storage-system#readme",
     "devDependencies": {
         "nodemon": "^2.0.15"
     },
@@ -38,8 +38,6 @@
         "dotenv": "^14.0.1",
         "ejs": "^3.1.6",
         "express": "^4.17.2",
-        "express-ejs-layouts": "^2.5.1",
-        "express-handlebars": "^6.0.2",
         "express-session": "^1.17.2",
         "express-status-monitor": "^1.3.3",
         "joi": "^17.6.0",
@@ -48,10 +46,6 @@
         "multer": "^1.4.4",
         "mysql": "^2.18.1",
         "mysql2": "^2.3.3",
-        "node-xlsx": "^0.21.0",
-        "nodemailer": "^6.7.2",
-        "nodemailer-express-handlebars": "^4.0.0",
-        "onesignal-node": "^3.3.0",
         "select2": "~4.0",
         "sequelize": "^6.13.0",
         "winston": "^3.5.0",
